--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
   <link href="./output.css" rel="stylesheet">
 </head>
 <body>
-  <p class="text-9xl bg-black text-white">this is my first tailwind</p>
+  <p class="text-9xl bg-black text-white">this is my first tailwind from dev01</p>
 </body>
 </html>
